# v8-ports

./: Makefile  distinfo  pkg-descr  pkg-plist
files/: patch-BUILD.gn  patch-build_config_BUILD.gn  patch-build_config_BUILDCONFIG.gn  patch-build_config_compiler_BUILD.gn  patch-build_config_compiler_compiler.gni  patch-build_config_features.gni  patch-build_config_linux_BUILD.gn  patch-build_config_linux_pkg-config.py  patch-build_config_sysroot.gni  patch-build_detect__host__arch.py  patch-build_gn__run__binary.py  patch-build_toolchain_gcc__toolchain.gni  patch-build_toolchain_get__concurrent__links.py  patch-build_toolchain_linux_BUILD.gn  patch-deps_v8_src_libsampler_sampler.cc  patch-src_base_cpu.cc  patch-src_base_platform_platform-posix.cc  patch-src_d8-posix.cc  patch-third__party_googletest_BUILD.gn  patch-v8_BUILD.gn  patch-v8_src_base_platform_platform-freebsd.cc
