--- BUILD.gn.orig	2018-08-28 20:00:10 UTC
+++ BUILD.gn
@@ -2529,7 +2529,7 @@ v8_source_set("v8_base") {
       "src/x64/simulator-x64.h",
       "src/x64/sse-instr.h",
     ]
-    if (is_linux) {
+    if (is_linux && !is_bsd) {
       sources += [
         "src/trap-handler/handler-inside-linux.cc",
         "src/trap-handler/handler-outside-linux.cc",
@@ -2875,7 +2875,7 @@ v8_component("v8_libbase") {
     }
   }
 
-  if (is_linux) {
+  if (is_linux && !is_bsd) {
     sources += [
       "src/base/debug/stack_trace_posix.cc",
       "src/base/platform/platform-linux.cc",
@@ -2895,6 +2895,12 @@ v8_component("v8_libbase") {
       "dl",
       "rt",
     ]
+  } else if (is_bsd) {
+    sources += [
+      "src/base/debug/stack_trace_posix.cc",
+      "src/base/platform/platform-freebsd.cc",
+    ]
+    libs = [ "rt", "execinfo" ]
   } else if (is_android) {
     if (current_toolchain == host_toolchain) {
       libs = [
@@ -3223,6 +3229,7 @@ if (is_component_build) {
     sources = [
       "src/v8dll-main.cc",
     ]
+    libs = ["execinfo"]
 
     public_deps = [
       ":v8_base",
