--- build/config/BUILD.gn.orig	2020-06-26 20:07:59 UTC
+++ build/config/BUILD.gn
@@ -167,7 +167,7 @@ config("debug") {
       # builds, and we have to tell it to turn it off.
       defines += [ "_HAS_ITERATOR_DEBUGGING=0" ]
     }
-  } else if (is_linux && current_cpu == "x64" && enable_iterator_debugging) {
+  } else if ((is_linux || is_bsd) && current_cpu == "x64" && enable_iterator_debugging) {
     # Enable libstdc++ debugging facilities to help catch problems early, see
     # http://crbug.com/65151 .
     # TODO(phajdan.jr): Should we enable this for all of POSIX?
@@ -269,9 +269,7 @@ config("default_libs") {
     ]
   } else if (is_linux) {
     libs = [
-      "dl",
       "pthread",
-      "rt",
     ]
   }
 }
@@ -320,7 +318,7 @@ config("executable_config") {
       "//build/config/ios:ios_dynamic_flags",
       "//build/config/ios:ios_executable_flags",
     ]
-  } else if (is_linux || is_android || current_os == "aix") {
+  } else if (is_linux || is_bsd || is_android || current_os == "aix") {
     configs += [ "//build/config/gcc:executable_ldconfig" ]
     if (is_android) {
       configs += [ "//build/config/android:executable_config" ]
