--- build/config/BUILDCONFIG.gn.orig	2020-06-26 18:07:59 UTC
+++ build/config/BUILDCONFIG.gn
@@ -131,11 +131,12 @@ declare_args() {
   is_official_build = false
 
   # Whether we're a traditional desktop unix.
-  is_desktop_linux = current_os == "linux"
+  is_desktop_linux = current_os == "linux" || current_os == "freebsd"
 
   # Set to true when compiling with the Clang compiler. Typically this is used
   # to configure warnings.
   is_clang =
+      current_os == "freebsd" ||
       current_os == "mac" || current_os == "ios" || current_os == "chromeos" ||
       current_os == "fuchsia" || current_os == "android" ||
       current_os == "win" ||
@@ -190,8 +191,8 @@ if (host_toolchain == "") {
   # TODO(dpranke): Add some sort of assert here that verifies that
   # no toolchain omitted host_toolchain from its toolchain_args().
 
-  if (host_os == "linux") {
-    if (target_os != "linux") {
+  if (host_os == "linux" || host_os == "freebsd") {
+    if (target_os != "linux" && target_os != "freebsd") {
       # TODO(dpranke) - is_clang normally applies only to the target
       # build, and there is no way to indicate that you want to override
       # it for both the target build *and* the host build. Do we need to
@@ -231,7 +232,7 @@ if (target_os == "android") {
   assert(host_os == "linux" || host_os == "mac",
          "Android builds are only supported on Linux and Mac hosts.")
   _default_toolchain = "//build/toolchain/android:android_clang_$target_cpu"
-} else if (target_os == "chromeos" || target_os == "linux") {
+} else if (target_os == "chromeos" || target_os == "linux" || target_os == "freebsd") {
   # See comments in build/toolchain/cros/BUILD.gn about board compiles.
   if (is_clang) {
     _default_toolchain = "//build/toolchain/linux:clang_$target_cpu"
@@ -300,6 +301,7 @@ if (current_os == "win" || current_os == "winuwp") {
   is_fuchsia = false
   is_ios = false
   is_linux = false
+  is_bsd = false
   is_mac = false
   is_nacl = false
   is_posix = false
@@ -310,6 +312,7 @@ if (current_os == "win" || current_os == "winuwp") {
   is_fuchsia = false
   is_ios = false
   is_linux = false
+  is_bsd = false
   is_mac = true
   is_nacl = false
   is_posix = true
@@ -320,6 +323,7 @@ if (current_os == "win" || current_os == "winuwp") {
   is_fuchsia = false
   is_ios = false
   is_linux = false
+  is_bsd = false
   is_mac = false
   is_nacl = false
   is_posix = true
@@ -330,6 +334,7 @@ if (current_os == "win" || current_os == "winuwp") {
   is_fuchsia = false
   is_ios = false
   is_linux = true
+  is_bsd = false
   is_mac = false
   is_nacl = false
   is_posix = true
@@ -343,6 +348,7 @@ if (current_os == "win" || current_os == "winuwp") {
   is_fuchsia = false
   is_ios = false
   is_linux = false
+  is_bsd = false
   is_mac = false
   is_nacl = true
   is_posix = true
@@ -353,6 +359,7 @@ if (current_os == "win" || current_os == "winuwp") {
   is_fuchsia = true
   is_ios = false
   is_linux = false
+  is_bsd = false
   is_mac = false
   is_nacl = false
   is_posix = false
@@ -363,16 +370,18 @@ if (current_os == "win" || current_os == "winuwp") {
   is_fuchsia = false
   is_ios = true
   is_linux = false
+  is_bsd = false
   is_mac = false
   is_nacl = false
   is_posix = true
   is_win = false
-} else if (current_os == "linux") {
+} else if (current_os == "linux" || current_os == "freebsd") {
   is_android = false
   is_chromeos = false
   is_fuchsia = false
   is_ios = false
   is_linux = true
+  is_bsd = true
   is_mac = false
   is_nacl = false
   is_posix = true
@@ -383,6 +392,7 @@ if (current_os == "win" || current_os == "winuwp") {
   is_fuchsia = false
   is_ios = false
   is_linux = false
+  is_bsd = false
   is_mac = false
   is_nacl = false
   is_posix = true
